tests/snapshots/examples_fixtures/type_system__failing__82_match_list_missing_empty.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/82_match_list_missing_empty.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/82_match_list_missing_empty.flx:4:1
  |
4 | match xs {
  | ^^^^^^^^^^
5 |     [h | t] -> h
  | ^^^^^^^^^^^^^^^^
6 | };
  | ^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
